spacing issues

--- a/sass/stylesheets/_tevo.scss
+++ b/sass/stylesheets/_tevo.scss
@@ -1836,7 +1836,9 @@ form {
 }
 
 .ch-img-5 {
-  background-image: url(../images/joe.png);
+
+  background: url(/images/joe2.jpg);
+
 }
 
 .ch-img-6 {
